prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-hello-world
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    prometheus: hello
